Add file with country codes
- Add file with all country codes for second currency;
- Create `exchanger_helper.rb` to read the data from the file;
- Call the method `countries_for_select` from the view to populate the select.

--- a/app/views/exchanger/home.html.erb
+++ b/app/views/exchanger/home.html.erb
@@ -3,7 +3,7 @@
   <%= form.select :from_currency, [["EUR", "EUR"]], selected: "EUR", disabled: true %>
 
   <%= form.label :to_currency, "Convert to:" %>
-  <%= form.select :to_currency, [["PLN", "PLN"], ["UAH", "UAH"], ["USD", "USD"]] %>
+  <%= form.select :to_currency, countries_for_select() %>
   
   <%= form.label :amount %>
   <%= form.number_field :amount, value: 100 %>
