--- a/app/views/exchanger/index.html.erb
+++ b/app/views/exchanger/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: "/search", method: :post do |form| %>
+<%= form_with url: "/search", method: :get do |form| %>
   <%= form.label :from_currency, "Convert from:" %>
   <%= form.select :from_currency, [["EUR", "EUR"]], selected: "EUR", disabled: true %>
 
